# C-Projects

./: README.md
Tesseract/: CMakeLists.txt  main.cpp
The Eid Tessarect/: CMakeLists.txt  main.cpp  readme.md
